# prime-intellect-rl-tower-defense

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  XDEVICE_HANDOVER_2026-03-13.md  env.py  pyproject.toml
.prime/: .env-metadata.json
configs/: env_schema.json
configs/lab/: prime-td-actual-game-command-sanity-x530.toml  prime-td-auto-advance-80-k.toml  prime-td-auto-advance-80-l.toml  prime-td-auto-advance-80-m.toml  prime-td-auto-advance-80-n.toml  prime-td-auto-advance-80-o.toml  prime-td-auto-advance-80-p.toml  prime-td-auto-advance-80-q.toml  prime-td-auto-advance-80-r.toml  (+111 more)
docs/: PI_Config_References.md  RESULTS.md
environments/: AGENTS.md
scripts/: blend_actual_game_command_examples.py  build_actual_game_command_corpus.py  build_actual_game_command_custom_replay.py  collect_actual_game_scripted_bridge_traces.mjs  collect_prime_run_artifacts.sh  eval.py  eval_actual_game_command_corpus.py  eval_actual_game_command_local_model.py  eval_baseline.py  export_actual_game_command_sft_dataset.py  filter_actual_game_bridge_failures.py  filter_actual_game_command_examples.py  heuristic_agent.py  prime_inference_check.py  push_pi_env_minimal.sh  relabel_actual_game_teacher_decisions.mjs  reward_breakdown.py  run_actual_game_command_adapter_server.py  run_actual_game_command_eval.py  run_actual_game_command_local_eval.py  run_actual_game_command_sft_prime_pod.sh  run_actual_game_command_sft_remote_wrapper.sh  score_actual_game_bridge_run.py  score_actual_game_command_predictions.py  select_actual_game_command_examples.py  smoke.py  split_actual_game_command_corpus.py  train_actual_game_command_sft.py  train_baseline.py
tests/: test_actual_game_command_adapter_server.py  test_actual_game_command_corpus.py  test_actual_game_env.py  test_blend_actual_game_command_examples.py  test_build_actual_game_command_corpus.py  test_build_actual_game_command_custom_replay.py  test_filter_actual_game_bridge_failures.py  test_filter_actual_game_command_examples.py  test_relabel_actual_game_teacher_decisions.py  test_reward_shaping_choose.py  test_score_actual_game_bridge_run.py  test_select_actual_game_command_examples.py  test_split_actual_game_command_corpus.py
(+14 files in other folders)
