[project]
name = "prime-intellect-rl-tower-defense"
version = "0.1.0"
description = "Text-first tower-defense environment for Prime Intellect hosted RFT."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Project Owner"}
]
dependencies = [
  "numpy>=1.26",
  "verifiers>=0.1.9.post3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
